separate cards into discrete components, implement DeleteButton functionality, EditButton and limited functionality, fix expand/collapse to be mor consistent, basic implementation of EditCard

--- a/css/master.sass
+++ b/css/master.sass
@@ -1,6 +1,6 @@
 body
  font-family: 'Open Sans', sans-serif;
- background-image: url("/css/china.png");
+ background-image: url("/css/lightpaperfibers.png");
 
 .container
   padding-right: 15px;
@@ -63,20 +63,49 @@ body
   margin-bottom: 0.75em;
   left: 78%
 
+.saveButton
+  position: relative;
+  font-size: 50px;
+  color: #388e3c;
+  border-radius: 100%;
+  border: 6px solid;
+  margin-bottom: 0.75em;
+  left: 73%
+
 .recipe
    border-style: solid;
    border-width: 1px;
    margin: 1em 0em;
-   border-color: #FFFFFF;
-   background-color: #FFFFFF;
+   border-color: #F5F5F5;
+   background-color: #F5F5F5;
    box-shadow: 0px 03px 10px #888888;
 
 .recipeExpand
    height: auto;
+   background-color: #FFFFFF;
+
+.expandedRecipeHeader
+  background-color: #F5F5F5;
+  position: relative;
+  top: -2.5em;
+  height: 103px;
+
+.expandedRecipeHeaderEdit
+  position: relative;
+  height: 103px;
+  padding-bottom: 2.5em;
 
 .recipeName
   font-size: 30px;
   margin-left: 5%;
+  width: 100%;
+
+.recipeNameExpanded
+  padding-top: 1em;
+
+.recipeNameEdit
+  width: 88%;
+  margin-top: 1em;
 
 .recipeList
   position: absolute;
